hero desktop version finished

--- a/index.html
+++ b/index.html
@@ -42,10 +42,17 @@
     </header>
 
     <main>
-        <section></section>
+        <section class="hero">
+            <div class="hero_wrapper container">
+                <div class="hero_content">
+                    <h1 class="hero_title">Good coffee is made simply.</h1>
+                    <p class="hero_desc">Start your mornings with the world’s best coffees. Try our expertly curated artisan coffees from our best roasters delivered directly to your door, at your schedule.</p>
+                    <a href="#" class="button">Create your plan</a>
+                </div>
+                <div class="hero_img"></div>
+            </div>
+        </section>
     </main>
-
-
 
     <footer class="site-footer">
         <nav class="footer container">
