--- a/index.html
+++ b/index.html
@@ -42,14 +42,55 @@
     </header>
 
     <main>
-      <section class="hero">
+        <section class="hero">
             <div class="hero_wrapper container">
                 <div class="hero_content">
                     <h1 class="hero_title">Good coffee is made simply.</h1>
-                    <p class="hero_desc">Start your mornings with the world’s best coffees. Try our expertly curated artisan coffees from our best roasters delivered directly to your door, at your schedule.</p>
+                    <p class="hero_desc">Start your mornings with the world’s best coffees. Try our expertly curated
+                        artisan coffees from our best roasters delivered directly to your door, at your schedule.</p>
                     <a href="#" class="button">Create your plan</a>
                 </div>
                 <div class="hero_img"></div>
+            </div>
+        </section>
+
+
+
+
+
+
+        <section style="background-color: #C18C57; margin: 20px;">
+            <div class="container">
+                <div class="promo">
+                    <h2 class="promo-title">Why choose us?</h2>
+                    <p class="promo-description">A large part of our role is choosing which particular coffees will be
+                        featured
+                        in our range. This means working closely with the best coffee growers to give
+                        you a more impactful experience on every level.</p>
+                    <div class="promo-card__box">
+                        <div class="promo-card">
+                            <img class="promo-card__img" src="./img/home-promo(1).png" alt="">
+                            <h3 class="promo-card__title">Best quality</h3>
+                            <p class="promo-card__description">Discover an endless variety of the world’s best artisan
+                                coffee
+                                from each of our roasters.</p>
+                        </div>
+
+                        <div class="promo-card">
+                            <img class="promo-card__img" src="./img/home-promo(2).png" alt="">
+                            <h3 class="promo-card__title">Exclusive benefits</h3>
+                            <p class="promo-card__description">Special offers and swag when you subscribe, including 30%
+                                off your first shipment.</p>
+                        </div>
+
+                        <div class="promo-card">
+                            <img class="promo-card__img" src="./img/home-promo(3).png" alt="">
+                            <h3 class="promo-card__title">Free shipping</h3>
+                            <p class="promo-card__description">We cover the cost and coffee is delivered fast. Peak
+                                freshness: guaranteed.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -86,8 +127,8 @@
 
                     <a class="button feature-button" href="#">Create your plan</a>
                 </div>
-            </div>  
-          </section>
+            </div>
+        </section>
     </main>
 
     <footer class="site-footer">
