--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         </div>
                     </div>
 
-                    <a class="button feature-button" href="#">Create your plan</a>
+                    <a class="feature-button button" href="#">Create your plan</a>
                 </div>
             </div>
         </section>
