--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
             <ul class="navbar_list">
                 <li class="navbar_item">
-                    <a href="./index.html" class="navbar_link">HOME</a>
+                    <a href="#" class="navbar_link">HOME</a>
                 </li>
                 <li class="navbar_item">
                     <a href="./about.html" class="navbar_link">ABOUT US</a>
@@ -188,7 +188,7 @@
 
             <ul class="footer-list">
                 <li class="footer-item">
-                    <a class="footer-link" href="./index.html">HOME</a>
+                    <a class="footer-link" href="#">HOME</a>
                 </li>
                 <li class="footer-item">
                     <a class="footer-link" href="./about.html">ABOUT US</a>
