--- a/about.html
+++ b/about.html
@@ -50,12 +50,14 @@
                         coffee from around the world. We have since been dedicated to bring the perfect cup - from bean to brew - in
                         every shipment.</p>
                 </div>
-                <div class="about_hero--img"></div>
+                <div class="about_hero--img_box">
+                    <img src="/img/about-hero-img.png" alt="" class="about_hero--img">
+                </div>
             </div>
         </section>
 
         <section class="mission">
-            <div class="mission_wrapper container">
+            <div style="padding: 150px 100px;" class="mission_wrapper container">
                 <img src="/img/coffee-cup.png" alt="img of a cup of coffee" class="mission_img">
                 <div class="mission_content-wrapper">
                     <h1 class="mission_title">Our commitment</h1>
