--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
                         artisan coffees from our best roasters delivered directly to your door, at your schedule.</p>
                     <a href="#" class="button">Create your plan</a>
                 </div>
-                <div class="hero_img"></div>
+                <div class="hero--img_box">
+                    <img src="/img/hero-photo.png" alt="" class="hero--img">
+                </div>
             </div>
         </section>
 
