--- a/about.html
+++ b/about.html
@@ -32,10 +32,10 @@
                     <a href="./index.html" class="navbar_link">HOME</a>
                 </li>
                 <li class="navbar_item">
-                    <a href="#" class="navbar_link">ABOUT US</a>
+                    <a href="./about.html" class="navbar_link">ABOUT US</a>
                 </li>
                 <li class="navbar_item">
-                    <a href="#" class="navbar_link">Create your plan</a>
+                    <a href="./plan.html" class="navbar_link">Create your plan</a>
                 </li>
             </ul>
         </nav>
@@ -46,8 +46,10 @@
             <div class="about_hero--wrapper container">
                 <div class="about_hero--content">
                     <h1 class="about_hero--title">About Us</h1>
-                    <p class="about_hero--desc">Coffeeroasters began its journey of exotic discovery in 1999, highlighting stories of
-                        coffee from around the world. We have since been dedicated to bring the perfect cup - from bean to brew - in
+                    <p class="about_hero--desc">Coffeeroasters began its journey of exotic discovery in 1999,
+                        highlighting stories of
+                        coffee from around the world. We have since been dedicated to bring the perfect cup - from bean
+                        to brew - in
                         every shipment.</p>
                 </div>
                 <div class="about_hero--img_box">
@@ -63,19 +65,25 @@
                     <h1 class="mission_title">Our commitment</h1>
                     <p class="mission_desc">We’re built on a simple mission and a commitment to doing good along the
                         way.
-                        We want to make it easy for you to discover and brew the world’s best coffee at home. It all starts at
+                        We want to make it easy for you to discover and brew the world’s best coffee at home. It all
+                        starts at
                         the
-                        source. To locate the specific lots we want to purchase, we travel nearly 60 days a year trying to
-                        understand the challenges and opportunities in each of these places. We collaborate with exceptional
+                        source. To locate the specific lots we want to purchase, we travel nearly 60 days a year trying
+                        to
+                        understand the challenges and opportunities in each of these places. We collaborate with
+                        exceptional
                         coffee
-                        growers and empower a global community of farmers through with well above fair-trade benchmarks. We also
-                        offer training, support farm community initiatives, and invest in coffee plant science. Curating only
+                        growers and empower a global community of farmers through with well above fair-trade benchmarks.
+                        We also
+                        offer training, support farm community initiatives, and invest in coffee plant science. Curating
+                        only
                         the
-                        finest blends, we roast each lot to highlight tasting profiles distinctive to their native growing
+                        finest blends, we roast each lot to highlight tasting profiles distinctive to their native
+                        growing
                         region.
                     </p>
-               </div>
-           </div>     
+                </div>
+            </div>
         </section>
 
         <section style="background-color: #C18C57; margin: 150px 20px 20px 20px;">
@@ -152,10 +160,10 @@
                     <a class="footer-link" href="./index.html">HOME</a>
                 </li>
                 <li class="footer-item">
-                    <a class="footer-link" href="#">ABOUT US</a>
+                    <a class="footer-link" href="./about.html">ABOUT US</a>
                 </li>
                 <li class="footer-item">
-                    <a class="footer-link" href="#">Create your plan</a>
+                    <a class="footer-link" href="./plan.html">Create your plan</a>
                 </li>
             </ul>
 
