plan-hero finished

--- a/plan.html
+++ b/plan.html
@@ -41,6 +41,20 @@
         </nav>
     </header>
 
+    <main>
+        <section class="plan_hero">
+            <div class="plan_hero--wrapper">
+                <div class="plan_hero--content">
+                    <h1 class="plan_hero--title">Create plan</h1>
+                    <p class="plan_hero--desc">Coffee the way you wanted it to be. For coffee delivered tomorrow, or next week.
+                        For whatever brew method you use. For choice, for convenience, for quality.</p>
+                </div>
+                <div class="plan_hero--img_box">
+                    <img src="/img/plan-hero-img.png" alt="" class="plan_hero--img">
+                </div>
+            </div>
+        </section>
+    </main>
 
     <footer class="site-footer">
         <nav class="footer container">
