coffee plan types WIP

--- a/plan.html
+++ b/plan.html
@@ -46,7 +46,8 @@
             <div class="plan_hero--wrapper">
                 <div class="plan_hero--content">
                     <h1 class="plan_hero--title">Create plan</h1>
-                    <p class="plan_hero--desc">Coffee the way you wanted it to be. For coffee delivered tomorrow, or next week.
+                    <p class="plan_hero--desc">Coffee the way you wanted it to be. For coffee delivered tomorrow, or
+                        next week.
                         For whatever brew method you use. For choice, for convenience, for quality.</p>
                 </div>
                 <div class="plan_hero--img_box">
@@ -54,9 +55,7 @@
                 </div>
             </div>
         </section>
-    </main>
 
-    <main>
         <section style="background-color: var(--primary-color); margin: 50px 20px;">
             <div class="container">
                 <div style="padding-top: 120px;" class="feature plan-feature">
@@ -89,8 +88,166 @@
                 </div>
             </div>
         </section>
-    </main>
 
+        <section class="coffee_plan">
+            <div class="coffee_plan--wrapper container">
+                <div class="coffee_plan--title_box">
+                    <h2 class="coffee_plan--title">01 Preferences</h2>
+                    <h2 class="coffee_plan--title">02 Bean Type</h2>
+                    <h2 class="coffee_plan--title">03 Quantity</h2>
+                    <h2 class="coffee_plan--title">04 Grind Option</h2>
+                    <h2 class="coffee_plan--title current">05 Deliveries</h2>
+                </div>
+
+                <div class="coffee_plan--info_box">
+                    <div class="coffee_plan--info_title_box">
+                        <h1 class="coffee_plan--info_title">How do you drink your coffee?</h1>
+                        <button class="coffee_plan--toggler">
+                            <svg width="40" height="41" viewBox="0 0 40 41" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M28.3332 15.784C28.0209 15.4736 27.5985 15.2993 27.1582 15.2993C26.7179 15.2993 26.2954 15.4736 25.9832 15.784L19.9998 21.684L14.0998 15.784C13.7876 15.4736 13.3651 15.2993 12.9248 15.2993C12.4845 15.2993 12.0621 15.4736 11.7498 15.784C11.5936 15.9389 11.4696 16.1232 11.385 16.3263C11.3004 16.5294 11.2568 16.7473 11.2568 16.9673C11.2568 17.1873 11.3004 17.4052 11.385 17.6083C11.4696 17.8114 11.5936 17.9957 11.7498 18.1506L18.8165 25.2173C18.9714 25.3735 19.1558 25.4975 19.3589 25.5821C19.562 25.6667 19.7798 25.7103 19.9998 25.7103C20.2199 25.7103 20.4377 25.6667 20.6408 25.5821C20.8439 25.4975 21.0282 25.3735 21.1832 25.2173L28.3332 18.1506C28.4894 17.9957 28.6134 17.8114 28.698 17.6083C28.7826 17.4052 28.8262 17.1873 28.8262 16.9673C28.8262 16.7473 28.7826 16.5294 28.698 16.3263C28.6134 16.1232 28.4894 15.9389 28.3332 15.784Z"
+                                    fill="#333333" />
+                            </svg>
+                        </button>
+                    </div>
+
+                    <div class="coffee_plan--card_box">
+                        <div class="coffee_plan--card">
+                            <h3 class="coffee_plan--card_title">Capsule</h3>
+                            <p class="coffee_plan--card_desc">Compatible with Nespresso systems and similar brewers</p>
+                        </div>
+
+                        <div class="coffee_plan--card">
+                            <h3 class="coffee_plan--card_title">Filter</h3>
+                            <p class="coffee_plan--card_desc">For pour over or drip methods like Aeropress, Chemex, and V60</p>
+                        </div>
+
+                        <div class="coffee_plan--card">
+                            <h3 class="coffee_plan--card_title">Espresso</h3>
+                            <p class="coffee_plan--card_desc">Dense and finely ground beans for an intense, flavorful experience</p>
+                        </div>
+                    </div>
+
+                    <div class="coffee_plan--info_title_box">
+                        <h1 class="coffee_plan--info_title">What type of coffee?</h1>
+                        <button class="coffee_plan--toggler">
+                            <svg width="40" height="41" viewBox="0 0 40 41" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M28.3332 15.784C28.0209 15.4736 27.5985 15.2993 27.1582 15.2993C26.7179 15.2993 26.2954 15.4736 25.9832 15.784L19.9998 21.684L14.0998 15.784C13.7876 15.4736 13.3651 15.2993 12.9248 15.2993C12.4845 15.2993 12.0621 15.4736 11.7498 15.784C11.5936 15.9389 11.4696 16.1232 11.385 16.3263C11.3004 16.5294 11.2568 16.7473 11.2568 16.9673C11.2568 17.1873 11.3004 17.4052 11.385 17.6083C11.4696 17.8114 11.5936 17.9957 11.7498 18.1506L18.8165 25.2173C18.9714 25.3735 19.1558 25.4975 19.3589 25.5821C19.562 25.6667 19.7798 25.7103 19.9998 25.7103C20.2199 25.7103 20.4377 25.6667 20.6408 25.5821C20.8439 25.4975 21.0282 25.3735 21.1832 25.2173L28.3332 18.1506C28.4894 17.9957 28.6134 17.8114 28.698 17.6083C28.7826 17.4052 28.8262 17.1873 28.8262 16.9673C28.8262 16.7473 28.7826 16.5294 28.698 16.3263C28.6134 16.1232 28.4894 15.9389 28.3332 15.784Z"
+                                    fill="#333333" />
+                            </svg>
+                        </button>
+                    </div>
+
+                    <div class="coffee_plan--card_box">
+                        <div class="coffee_plan--card">
+                            <h3 class="coffee_plan--card_title">Single Origin</h3>
+                            <p class="coffee_plan--card_desc">Distinct, high quality coffee from a specific family-owned farm</p>
+                        </div>
+
+                        <div class="coffee_plan--card">
+                            <h3 class="coffee_plan--card_title">Decaf</h3>
+                            <p class="coffee_plan--card_desc">Just like regular coffee, except the caffeine has been removed</p>
+                        </div>
+
+                        <div class="coffee_plan--card">
+                            <h3 class="coffee_plan--card_title">Blended</h3>
+                            <p class="coffee_plan--card_desc">Combination of two or three dark roasted beans of organic coffees</p>
+                        </div>
+                    </div>
+
+                    <div class="coffee_plan--info_title_box">
+                        <h1 class="coffee_plan--info_title">How much would you like?</h1>
+                        <button class="coffee_plan--toggler">
+                            <svg width="40" height="41" viewBox="0 0 40 41" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M28.3332 15.784C28.0209 15.4736 27.5985 15.2993 27.1582 15.2993C26.7179 15.2993 26.2954 15.4736 25.9832 15.784L19.9998 21.684L14.0998 15.784C13.7876 15.4736 13.3651 15.2993 12.9248 15.2993C12.4845 15.2993 12.0621 15.4736 11.7498 15.784C11.5936 15.9389 11.4696 16.1232 11.385 16.3263C11.3004 16.5294 11.2568 16.7473 11.2568 16.9673C11.2568 17.1873 11.3004 17.4052 11.385 17.6083C11.4696 17.8114 11.5936 17.9957 11.7498 18.1506L18.8165 25.2173C18.9714 25.3735 19.1558 25.4975 19.3589 25.5821C19.562 25.6667 19.7798 25.7103 19.9998 25.7103C20.2199 25.7103 20.4377 25.6667 20.6408 25.5821C20.8439 25.4975 21.0282 25.3735 21.1832 25.2173L28.3332 18.1506C28.4894 17.9957 28.6134 17.8114 28.698 17.6083C28.7826 17.4052 28.8262 17.1873 28.8262 16.9673C28.8262 16.7473 28.7826 16.5294 28.698 16.3263C28.6134 16.1232 28.4894 15.9389 28.3332 15.784Z"
+                                    fill="#333333" />
+                            </svg>
+                        </button>
+                    </div>
+
+                    <div class="coffee_plan--card_box">
+                        <div class="coffee_plan--card">
+                            <h3 class="coffee_plan--card_title">250g</h3>
+                            <p class="coffee_plan--card_desc">Perfect for the solo drinker. Yields about 12 delicious cups.</p>
+                        </div>
+
+                        <div class="coffee_plan--card">
+                            <h3 class="coffee_plan--card_title">500g</h3>
+                            <p class="coffee_plan--card_desc">Perfect option for a couple. Yields about 40 delectable cups.</p>
+                        </div>
+
+                        <div class="coffee_plan--card">
+                            <h3 class="coffee_plan--card_title">1000g</h3>
+                            <p class="coffee_plan--card_desc">Perfect for offices and events. Yields about 90 delightful cups.</p>
+                        </div>
+                    </div>
+
+                    <div class="coffee_plan--info_title_box">
+                        <h1 class="coffee_plan--info_title">Want us to grind them?</h1>
+                        <button class="coffee_plan--toggler">
+                            <svg width="40" height="41" viewBox="0 0 40 41" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M28.3332 15.784C28.0209 15.4736 27.5985 15.2993 27.1582 15.2993C26.7179 15.2993 26.2954 15.4736 25.9832 15.784L19.9998 21.684L14.0998 15.784C13.7876 15.4736 13.3651 15.2993 12.9248 15.2993C12.4845 15.2993 12.0621 15.4736 11.7498 15.784C11.5936 15.9389 11.4696 16.1232 11.385 16.3263C11.3004 16.5294 11.2568 16.7473 11.2568 16.9673C11.2568 17.1873 11.3004 17.4052 11.385 17.6083C11.4696 17.8114 11.5936 17.9957 11.7498 18.1506L18.8165 25.2173C18.9714 25.3735 19.1558 25.4975 19.3589 25.5821C19.562 25.6667 19.7798 25.7103 19.9998 25.7103C20.2199 25.7103 20.4377 25.6667 20.6408 25.5821C20.8439 25.4975 21.0282 25.3735 21.1832 25.2173L28.3332 18.1506C28.4894 17.9957 28.6134 17.8114 28.698 17.6083C28.7826 17.4052 28.8262 17.1873 28.8262 16.9673C28.8262 16.7473 28.7826 16.5294 28.698 16.3263C28.6134 16.1232 28.4894 15.9389 28.3332 15.784Z"
+                                    fill="#333333" />
+                            </svg>
+                        </button>
+                    </div>
+
+                    <div class="coffee_plan--card_box">
+                        <div class="coffee_plan--card">
+                            <h3 class="coffee_plan--card_title">Wholebean</h3>
+                            <p class="coffee_plan--card_desc">Best choice if you cherish the full sensory experience</p>
+                        </div>
+
+                        <div class="coffee_plan--card">
+                            <h3 class="coffee_plan--card_title">Filter</h3>
+                            <p class="coffee_plan--card_desc">For drip or pour-over coffee methods such as V60 or Aeropress</p>
+                        </div>
+
+                        <div class="coffee_plan--card">
+                            <h3 class="coffee_plan--card_title">Cafetiére</h3>
+                            <p class="coffee_plan--card_desc">Course ground beans specially suited for french press coffee</p>
+                        </div>
+                    </div>
+
+                    <div class="coffee_plan--info_title_box">
+                        <h1 class="coffee_plan--info_title">How often should we deliver?</h1>
+                        <button class="coffee_plan--toggler">
+                            <svg width="40" height="41" viewBox="0 0 40 41" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M28.3332 15.784C28.0209 15.4736 27.5985 15.2993 27.1582 15.2993C26.7179 15.2993 26.2954 15.4736 25.9832 15.784L19.9998 21.684L14.0998 15.784C13.7876 15.4736 13.3651 15.2993 12.9248 15.2993C12.4845 15.2993 12.0621 15.4736 11.7498 15.784C11.5936 15.9389 11.4696 16.1232 11.385 16.3263C11.3004 16.5294 11.2568 16.7473 11.2568 16.9673C11.2568 17.1873 11.3004 17.4052 11.385 17.6083C11.4696 17.8114 11.5936 17.9957 11.7498 18.1506L18.8165 25.2173C18.9714 25.3735 19.1558 25.4975 19.3589 25.5821C19.562 25.6667 19.7798 25.7103 19.9998 25.7103C20.2199 25.7103 20.4377 25.6667 20.6408 25.5821C20.8439 25.4975 21.0282 25.3735 21.1832 25.2173L28.3332 18.1506C28.4894 17.9957 28.6134 17.8114 28.698 17.6083C28.7826 17.4052 28.8262 17.1873 28.8262 16.9673C28.8262 16.7473 28.7826 16.5294 28.698 16.3263C28.6134 16.1232 28.4894 15.9389 28.3332 15.784Z"
+                                    fill="#333333" />
+                            </svg>
+                        </button>
+                    </div>
+
+                    <div class="coffee_plan--card_box">
+                        <div class="coffee_plan--card">
+                            <h3 class="coffee_plan--card_title">Every week</h3>
+                            <p class="coffee_plan--card_desc">$7.20 per shipment. Includes free first-class shipping.</p>
+                        </div>
+
+                        <div class="coffee_plan--card">
+                            <h3 class="coffee_plan--card_title">Every 2 weeks</h3>
+                            <p class="coffee_plan--card_desc">$9.60 per shipment. Includes free priority shipping.</p>
+                        </div>
+
+                        <div class="coffee_plan--card">
+                            <h3 class="coffee_plan--card_title">Every month</h3>
+                            <p class="coffee_plan--card_desc">$12.00 per shipment. Includes free priority shipping.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <footer class="site-footer">
         <nav class="footer container">
@@ -142,6 +299,7 @@
             </div>
         </nav>
     </footer>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
