plan section js WIP

--- a/plan.html
+++ b/plan.html
@@ -90,6 +90,7 @@
         </section>
 
         <section class="coffee_plan">
+            <!-- coffee_plan--open -->
             <div class="coffee_plan--wrapper container">
                 <div class="coffee_plan--title_box">
                     <h2 class="coffee_plan--title">01 Preferences</h2>
@@ -102,7 +103,7 @@
                 <div class="coffee_plan--info_box">
                     <div class="coffee_plan--info_title_box">
                         <h1 class="coffee_plan--info_title">How do you drink your coffee?</h1>
-                        <button class="coffee_plan--toggler">
+                        <button class="coffee_plan--toggler plan-toggler1">
                             <svg width="40" height="41" viewBox="0 0 40 41" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -112,7 +113,7 @@
                         </button>
                     </div>
 
-                    <div class="coffee_plan--card_box">
+                    <div class="coffee_plan--card_box plan-card1">
                         <div class="coffee_plan--card">
                             <h3 class="coffee_plan--card_title">Capsule</h3>
                             <p class="coffee_plan--card_desc">Compatible with Nespresso systems and similar brewers</p>
@@ -120,18 +121,20 @@
 
                         <div class="coffee_plan--card">
                             <h3 class="coffee_plan--card_title">Filter</h3>
-                            <p class="coffee_plan--card_desc">For pour over or drip methods like Aeropress, Chemex, and V60</p>
+                            <p class="coffee_plan--card_desc">For pour over or drip methods like Aeropress, Chemex, and
+                                V60</p>
                         </div>
 
                         <div class="coffee_plan--card">
                             <h3 class="coffee_plan--card_title">Espresso</h3>
-                            <p class="coffee_plan--card_desc">Dense and finely ground beans for an intense, flavorful experience</p>
+                            <p class="coffee_plan--card_desc">Dense and finely ground beans for an intense, flavorful
+                                experience</p>
                         </div>
                     </div>
 
                     <div class="coffee_plan--info_title_box">
                         <h1 class="coffee_plan--info_title">What type of coffee?</h1>
-                        <button class="coffee_plan--toggler">
+                        <button class="coffee_plan--toggler plan-toggler2">
                             <svg width="40" height="41" viewBox="0 0 40 41" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -141,26 +144,29 @@
                         </button>
                     </div>
 
-                    <div class="coffee_plan--card_box">
+                    <div class="coffee_plan--card_box plan-card2">
                         <div class="coffee_plan--card">
                             <h3 class="coffee_plan--card_title">Single Origin</h3>
-                            <p class="coffee_plan--card_desc">Distinct, high quality coffee from a specific family-owned farm</p>
+                            <p class="coffee_plan--card_desc">Distinct, high quality coffee from a specific family-owned
+                                farm</p>
                         </div>
 
                         <div class="coffee_plan--card">
                             <h3 class="coffee_plan--card_title">Decaf</h3>
-                            <p class="coffee_plan--card_desc">Just like regular coffee, except the caffeine has been removed</p>
+                            <p class="coffee_plan--card_desc">Just like regular coffee, except the caffeine has been
+                                removed</p>
                         </div>
 
                         <div class="coffee_plan--card">
                             <h3 class="coffee_plan--card_title">Blended</h3>
-                            <p class="coffee_plan--card_desc">Combination of two or three dark roasted beans of organic coffees</p>
+                            <p class="coffee_plan--card_desc">Combination of two or three dark roasted beans of organic
+                                coffees</p>
                         </div>
                     </div>
 
                     <div class="coffee_plan--info_title_box">
                         <h1 class="coffee_plan--info_title">How much would you like?</h1>
-                        <button class="coffee_plan--toggler">
+                        <button class="coffee_plan--toggler plan-toggler3">
                             <svg width="40" height="41" viewBox="0 0 40 41" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -170,26 +176,29 @@
                         </button>
                     </div>
 
-                    <div class="coffee_plan--card_box">
+                    <div class="coffee_plan--card_box plan-card3">
                         <div class="coffee_plan--card">
                             <h3 class="coffee_plan--card_title">250g</h3>
-                            <p class="coffee_plan--card_desc">Perfect for the solo drinker. Yields about 12 delicious cups.</p>
+                            <p class="coffee_plan--card_desc">Perfect for the solo drinker. Yields about 12 delicious
+                                cups.</p>
                         </div>
 
                         <div class="coffee_plan--card">
                             <h3 class="coffee_plan--card_title">500g</h3>
-                            <p class="coffee_plan--card_desc">Perfect option for a couple. Yields about 40 delectable cups.</p>
+                            <p class="coffee_plan--card_desc">Perfect option for a couple. Yields about 40 delectable
+                                cups.</p>
                         </div>
 
                         <div class="coffee_plan--card">
                             <h3 class="coffee_plan--card_title">1000g</h3>
-                            <p class="coffee_plan--card_desc">Perfect for offices and events. Yields about 90 delightful cups.</p>
+                            <p class="coffee_plan--card_desc">Perfect for offices and events. Yields about 90 delightful
+                                cups.</p>
                         </div>
                     </div>
 
                     <div class="coffee_plan--info_title_box">
                         <h1 class="coffee_plan--info_title">Want us to grind them?</h1>
-                        <button class="coffee_plan--toggler">
+                        <button class="coffee_plan--toggler plan-toggler4">
                             <svg width="40" height="41" viewBox="0 0 40 41" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -199,7 +208,7 @@
                         </button>
                     </div>
 
-                    <div class="coffee_plan--card_box">
+                    <div class="coffee_plan--card_box plan-card4">
                         <div class="coffee_plan--card">
                             <h3 class="coffee_plan--card_title">Wholebean</h3>
                             <p class="coffee_plan--card_desc">Best choice if you cherish the full sensory experience</p>
@@ -207,18 +216,20 @@
 
                         <div class="coffee_plan--card">
                             <h3 class="coffee_plan--card_title">Filter</h3>
-                            <p class="coffee_plan--card_desc">For drip or pour-over coffee methods such as V60 or Aeropress</p>
+                            <p class="coffee_plan--card_desc">For drip or pour-over coffee methods such as V60 or
+                                Aeropress</p>
                         </div>
 
                         <div class="coffee_plan--card">
                             <h3 class="coffee_plan--card_title">Cafetiére</h3>
-                            <p class="coffee_plan--card_desc">Course ground beans specially suited for french press coffee</p>
+                            <p class="coffee_plan--card_desc">Course ground beans specially suited for french press
+                                coffee</p>
                         </div>
                     </div>
 
                     <div class="coffee_plan--info_title_box">
                         <h1 class="coffee_plan--info_title">How often should we deliver?</h1>
-                        <button class="coffee_plan--toggler">
+                        <button class="coffee_plan--toggler plan-toggler5">
                             <svg width="40" height="41" viewBox="0 0 40 41" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -228,10 +239,11 @@
                         </button>
                     </div>
 
-                    <div class="coffee_plan--card_box">
+                    <div class="coffee_plan--card_box plan-card5">
                         <div class="coffee_plan--card">
                             <h3 class="coffee_plan--card_title">Every week</h3>
-                            <p class="coffee_plan--card_desc">$7.20 per shipment. Includes free first-class shipping.</p>
+                            <p class="coffee_plan--card_desc">$7.20 per shipment. Includes free first-class shipping.
+                            </p>
                         </div>
 
                         <div class="coffee_plan--card">
