plan-section style updates

--- a/plan.html
+++ b/plan.html
@@ -43,7 +43,7 @@
 
     <main>
         <section class="plan_hero">
-            <div class="plan_hero--wrapper">
+            <div class="plan_hero--wrapper container">
                 <div class="plan_hero--content">
                     <h1 class="plan_hero--title">Create plan</h1>
                     <p class="plan_hero--desc">Coffee the way you wanted it to be. For coffee delivered tomorrow, or
@@ -120,12 +120,14 @@
 
                         <div class="coffee_plan--card">
                             <h3 class="coffee_plan--card_title">Filter</h3>
-                            <p class="coffee_plan--card_desc">For pour over or drip methods like Aeropress, Chemex, and V60</p>
+                            <p class="coffee_plan--card_desc">For pour over or drip methods like Aeropress, Chemex, and
+                                V60</p>
                         </div>
 
                         <div class="coffee_plan--card">
                             <h3 class="coffee_plan--card_title">Espresso</h3>
-                            <p class="coffee_plan--card_desc">Dense and finely ground beans for an intense, flavorful experience</p>
+                            <p class="coffee_plan--card_desc">Dense and finely ground beans for an intense, flavorful
+                                experience</p>
                         </div>
                     </div>
 
@@ -144,17 +146,20 @@
                     <div class="coffee_plan--card_box">
                         <div class="coffee_plan--card">
                             <h3 class="coffee_plan--card_title">Single Origin</h3>
-                            <p class="coffee_plan--card_desc">Distinct, high quality coffee from a specific family-owned farm</p>
+                            <p class="coffee_plan--card_desc">Distinct, high quality coffee from a specific family-owned
+                                farm</p>
                         </div>
 
                         <div class="coffee_plan--card">
                             <h3 class="coffee_plan--card_title">Decaf</h3>
-                            <p class="coffee_plan--card_desc">Just like regular coffee, except the caffeine has been removed</p>
+                            <p class="coffee_plan--card_desc">Just like regular coffee, except the caffeine has been
+                                removed</p>
                         </div>
 
                         <div class="coffee_plan--card">
                             <h3 class="coffee_plan--card_title">Blended</h3>
-                            <p class="coffee_plan--card_desc">Combination of two or three dark roasted beans of organic coffees</p>
+                            <p class="coffee_plan--card_desc">Combination of two or three dark roasted beans of organic
+                                coffees</p>
                         </div>
                     </div>
 
@@ -173,17 +178,20 @@
                     <div class="coffee_plan--card_box">
                         <div class="coffee_plan--card">
                             <h3 class="coffee_plan--card_title">250g</h3>
-                            <p class="coffee_plan--card_desc">Perfect for the solo drinker. Yields about 12 delicious cups.</p>
+                            <p class="coffee_plan--card_desc">Perfect for the solo drinker. Yields about 12 delicious
+                                cups.</p>
                         </div>
 
                         <div class="coffee_plan--card">
                             <h3 class="coffee_plan--card_title">500g</h3>
-                            <p class="coffee_plan--card_desc">Perfect option for a couple. Yields about 40 delectable cups.</p>
+                            <p class="coffee_plan--card_desc">Perfect option for a couple. Yields about 40 delectable
+                                cups.</p>
                         </div>
 
                         <div class="coffee_plan--card">
                             <h3 class="coffee_plan--card_title">1000g</h3>
-                            <p class="coffee_plan--card_desc">Perfect for offices and events. Yields about 90 delightful cups.</p>
+                            <p class="coffee_plan--card_desc">Perfect for offices and events. Yields about 90 delightful
+                                cups.</p>
                         </div>
                     </div>
 
@@ -207,12 +215,14 @@
 
                         <div class="coffee_plan--card">
                             <h3 class="coffee_plan--card_title">Filter</h3>
-                            <p class="coffee_plan--card_desc">For drip or pour-over coffee methods such as V60 or Aeropress</p>
+                            <p class="coffee_plan--card_desc">For drip or pour-over coffee methods such as V60 or
+                                Aeropress</p>
                         </div>
 
                         <div class="coffee_plan--card">
                             <h3 class="coffee_plan--card_title">Cafetiére</h3>
-                            <p class="coffee_plan--card_desc">Course ground beans specially suited for french press coffee</p>
+                            <p class="coffee_plan--card_desc">Course ground beans specially suited for french press
+                                coffee</p>
                         </div>
                     </div>
 
@@ -231,7 +241,8 @@
                     <div class="coffee_plan--card_box">
                         <div class="coffee_plan--card">
                             <h3 class="coffee_plan--card_title">Every week</h3>
-                            <p class="coffee_plan--card_desc">$7.20 per shipment. Includes free first-class shipping.</p>
+                            <p class="coffee_plan--card_desc">$7.20 per shipment. Includes free first-class shipping.
+                            </p>
                         </div>
 
                         <div class="coffee_plan--card">
@@ -243,6 +254,20 @@
                             <h3 class="coffee_plan--card_title">Every month</h3>
                             <p class="coffee_plan--card_desc">$12.00 per shipment. Includes free priority shipping.</p>
                         </div>
+                    </div>
+
+                    <div class="coffee_plan--summary">
+                        <div class="coffee_plan--summary_content">
+                            <h4 class="coffee_plan--summary_title">Order Summary</h4>
+                            <p class="coffee_plan--summary_desc">“I drink my coffee using Capsules, with a _____ type of
+                                bean.
+                                _____ , sent to
+                                me _____.”</p>
+                        </div>
+                    </div>
+
+                    <div style="display: flex; justify-content: flex-end;">
+                        <div style="margin: 40px 0;" class="button">Create me plan</div>
                     </div>
                 </div>
             </div>
