plan page JS WIP

--- a/plan.html
+++ b/plan.html
@@ -101,9 +101,9 @@
                 </div>
 
                 <div class="coffee_plan--info_box">
-                    <div class="coffee_plan--info_title_box">
+                    <div class="coffee_plan--info_title_box plan-toggler1">
                         <h1 class="coffee_plan--info_title">How do you drink your coffee?</h1>
-                        <button class="coffee_plan--toggler plan-toggler1">
+                        <button class="coffee_plan--toggler">
                             <svg width="40" height="41" viewBox="0 0 40 41" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -132,9 +132,9 @@
                         </div>
                     </div>
 
-                    <div class="coffee_plan--info_title_box">
+                    <div class="coffee_plan--info_title_box plan-toggler2">
                         <h1 class="coffee_plan--info_title">What type of coffee?</h1>
-                        <button class="coffee_plan--toggler plan-toggler2">
+                        <button class="coffee_plan--toggler">
                             <svg width="40" height="41" viewBox="0 0 40 41" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -164,9 +164,9 @@
                         </div>
                     </div>
 
-                    <div class="coffee_plan--info_title_box">
+                    <div class="coffee_plan--info_title_box plan-toggler3">
                         <h1 class="coffee_plan--info_title">How much would you like?</h1>
-                        <button class="coffee_plan--toggler plan-toggler3">
+                        <button class="coffee_plan--toggler">
                             <svg width="40" height="41" viewBox="0 0 40 41" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -196,9 +196,9 @@
                         </div>
                     </div>
 
-                    <div class="coffee_plan--info_title_box">
+                    <div class="coffee_plan--info_title_box plan-toggler4">
                         <h1 class="coffee_plan--info_title">Want us to grind them?</h1>
-                        <button class="coffee_plan--toggler plan-toggler4">
+                        <button class="coffee_plan--toggler">
                             <svg width="40" height="41" viewBox="0 0 40 41" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -227,9 +227,9 @@
                         </div>
                     </div>
 
-                    <div class="coffee_plan--info_title_box">
+                    <div class="coffee_plan--info_title_box plan-toggler5">
                         <h1 class="coffee_plan--info_title">How often should we deliver?</h1>
-                        <button class="coffee_plan--toggler plan-toggler5">
+                        <button class="coffee_plan--toggler">
                             <svg width="40" height="41" viewBox="0 0 40 41" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
