plan section js updated

--- a/plan.html
+++ b/plan.html
@@ -93,11 +93,11 @@
             <!-- coffee_plan--open -->
             <div class="coffee_plan--wrapper container">
                 <div class="coffee_plan--title_box">
-                    <h2 class="coffee_plan--title">01 Preferences</h2>
-                    <h2 class="coffee_plan--title">02 Bean Type</h2>
-                    <h2 class="coffee_plan--title">03 Quantity</h2>
-                    <h2 class="coffee_plan--title">04 Grind Option</h2>
-                    <h2 class="coffee_plan--title current">05 Deliveries</h2>
+                    <h2 class="coffee_plan--title plan-title__curent1">01 Preferences</h2>
+                    <h2 class="coffee_plan--title plan-title__curent2">02 Bean Type</h2>
+                    <h2 class="coffee_plan--title plan-title__curent3">03 Quantity</h2>
+                    <h2 class="coffee_plan--title plan-title__curent4">04 Grind Option</h2>
+                    <h2 class="coffee_plan--title plan-title__curent5">05 Deliveries</h2>
                 </div>
 
                 <div class="coffee_plan--info_box">
